solve warnings.